[gd_scene load_steps=19 format=3 uid="uid://b4vadqqj38k7g"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_5wbwr"]
[ext_resource type="PackedScene" uid="uid://ddnyj3yf6gsgm" path="res://Scenes/empty_clickable.tscn" id="1_8oicw"]
[ext_resource type="Script" path="res://Scripts/ClickableOptions.gd" id="2_647cv"]
[ext_resource type="Script" path="res://Resources/inspectable.gd" id="4_bi7mt"]
[ext_resource type="Script" path="res://Resources/takeable.gd" id="4_fb3mb"]
[ext_resource type="Script" path="res://Resources/talkable.gd" id="6_4unax"]
[ext_resource type="PackedScene" uid="uid://dkt4alowy0xo1" path="res://Scenes/character.tscn" id="7_ijliu"]
[ext_resource type="PackedScene" uid="uid://bvnv6348g0bw4" path="res://Scenes/inventory_item.tscn" id="8_6sgw2"]
[ext_resource type="Texture2D" uid="uid://06xexhbo8g18" path="res://Images/icon.svg" id="9_rpq4y"]

[sub_resource type="Resource" id="Resource_btftq"]
script = ExtResource("4_bi7mt")
text = "I'm a collision box."
show = true

[sub_resource type="Resource" id="Resource_vygk8"]
script = ExtResource("4_fb3mb")
text = "You take the collision box."
show = true

[sub_resource type="Resource" id="Resource_jklfx"]
script = ExtResource("6_4unax")
text = PackedStringArray("A: You come here often?", "B: Nope!")
show = true

[sub_resource type="Resource" id="Resource_0glfi"]
script = ExtResource("4_bi7mt")
text = "I'm a different collision box."
show = true

[sub_resource type="Resource" id="Resource_i5mxj"]
script = ExtResource("4_fb3mb")
text = "Fine, I'll take this one too."
show = true

[sub_resource type="Resource" id="Resource_ie03k"]
script = ExtResource("6_4unax")
text = PackedStringArray()
show = false

[sub_resource type="Resource" id="Resource_5updc"]
script = ExtResource("4_bi7mt")
text = ""
show = false

[sub_resource type="Resource" id="Resource_snrj4"]
script = ExtResource("4_fb3mb")
text = ""
show = false

[sub_resource type="Resource" id="Resource_i7wg7"]
script = ExtResource("6_4unax")
text = PackedStringArray()
show = false

[node name="Main" type="Node2D"]
script = ExtResource("1_5wbwr")

[node name="ClickableOptions" type="VBoxContainer" parent="."]
visible = false
top_level = true
offset_right = 65.0
offset_bottom = 101.0
script = ExtResource("2_647cv")

[node name="Inspect" type="Button" parent="ClickableOptions"]
layout_mode = 2
tooltip_text = "Take a closer look"
text = "Inspect"

[node name="Take" type="Button" parent="ClickableOptions"]
layout_mode = 2
tooltip_text = "Take the item"
text = "Take"

[node name="Talk" type="Button" parent="ClickableOptions"]
layout_mode = 2
tooltip_text = "Strike up a conversation"
text = "Talk"

[node name="Cancel" type="Button" parent="ClickableOptions"]
layout_mode = 2
text = "Cancel"

[node name="test_clickable" parent="." instance=ExtResource("1_8oicw")]
position = Vector2(192, 414)
inspectable_text = SubResource("Resource_btftq")
takeable_text = SubResource("Resource_vygk8")
talkable_text = SubResource("Resource_jklfx")

[node name="Legally Distinct Clickable" parent="." instance=ExtResource("1_8oicw")]
position = Vector2(409, 346)
inspectable_text = SubResource("Resource_0glfi")
takeable_text = SubResource("Resource_i5mxj")
talkable_text = SubResource("Resource_ie03k")

[node name="empty_clickable" parent="." instance=ExtResource("1_8oicw")]
position = Vector2(293, 190)
inspectable_text = SubResource("Resource_5updc")
takeable_text = SubResource("Resource_snrj4")
talkable_text = SubResource("Resource_i7wg7")

[node name="CharacterBody2D" parent="." instance=ExtResource("7_ijliu")]

[node name="Inventory_item" parent="." instance=ExtResource("8_6sgw2")]
position = Vector2(80, 44)
item_texture = ExtResource("9_rpq4y")

[connection signal="pressed" from="ClickableOptions/Inspect" to="ClickableOptions" method="_on_inspect_pressed"]
[connection signal="pressed" from="ClickableOptions/Take" to="ClickableOptions" method="_on_take_pressed"]
[connection signal="pressed" from="ClickableOptions/Talk" to="ClickableOptions" method="_on_talk_pressed"]
[connection signal="pressed" from="ClickableOptions/Cancel" to="ClickableOptions" method="_on_cancel_pressed"]
